# ticktoucan

./: .gitignore  CMakeLists.txt  README.md  install-sim.sh  notes.txt
include/: ticktoucan.h
include/platform_contracts/: ticktoucan_platform.h
sim/: CMakeLists.txt  ticktoucan_platform.cpp
src/: CMakeLists.txt  ticktoucan.cpp
test/utest/: CMakeLists.txt  run.sh
test/utest/tests/: CMakeLists.txt
test/utest/tests/basic/: CMakeLists.txt  basic_tests.cpp  basic_tests_main.cpp
test/utest/tests/setup/: CMakeLists.txt  setup_tests.cpp
